# firelands-next

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  MmapGenerator.cpp  README.md  authserver.yaml  docker-compose.yml  implementation_plan.md  worldserver.yaml
src/infrastructure/: CMakeLists.txt
src/infrastructure/collision/: DetourNavMeshManager.cpp  DetourNavMeshManager.h  MapCollisionQueriesReal.cpp  MapCollisionQueriesReal.h  VMapManager2.cpp  VMapManager2.h  WorldModelRuntime.cpp  WorldModelRuntime.h
src/infrastructure/dbc/: SpellCastTablesDbc.cpp  SpellCastTablesDbc.h  SpellEntryDbcStore.cpp  SpellEntryDbcStore.h
src/infrastructure/persistence/: DatabaseMigrationCatalog.h  DatabaseMigrator.cpp  DatabaseMigrator.h  DatabaseService.h  MySqlAccountDataRepository.cpp  MySqlAccountDataRepository.h  MySqlAccountRepository.cpp  MySqlAccountRepository.h  MySqlCharacterRepository.cpp  MySqlCharacterRepository.h  MySqlCommandDefinitionRepository.cpp  MySqlCommandDefinitionRepository.h  MySqlCreatureClassLevelStatsRepository.cpp  MySqlCreatureClassLevelStatsRepository.h  MySqlCreatureSpawnRepository.cpp  MySqlCreatureSpawnRepository.h  MySqlGmTicketRepository.cpp  MySqlGossipRepository.cpp  MySqlNpcTemplateSearchRepository.cpp  MySqlNpcTemplateSearchRepository.h  MySqlNpcTextRepository.cpp  MySqlNpcTextRepository.h  MySqlPhaseAreaCatalog.cpp  MySqlPhaseAreaCatalog.h  MySqlPhaseAreaCatalogRepository.cpp  MySqlPhaseAreaCatalogRepository.h  MySqlPhaseConditionRepository.cpp  MySqlPhaseConditionRepository.h  MySqlPhaseGroupCatalog.cpp  MySqlPhaseGroupCatalog.h  MySqlPhaseGroupCatalogRepository.cpp  MySqlPhaseGroupCatalogRepository.h  MySqlPlayerCreateInfoRepository.cpp  MySqlPlayerCreateInfoRepository.h  MySqlPlayerQuestProgressRepository.cpp  MySqlPlayerQuestProgressRepository.h  MySqlQuestGossipRepository.cpp  MySqlQuestGossipRepository.h  MySqlRbacRepository.cpp  MySqlRbacRepository.h  (+1 more)
src/infrastructure/scripting/: LuaGameScriptHost.cpp  LuaGameScriptHost.h
src/infrastructure/world/: DbCreatureSpawnBootstrap.cpp  DbCreatureSpawnBootstrap.h  MapAuraTicker.cpp  MapCollisionQueriesStub.h  MapCreatureProximityAggroTicker.cpp  MapCreatureProximityAggroTicker.h  MapPlayerRegenTicker.cpp  MapPlayerRegenTicker.h
src/shared/: Banner.h  BigInt.h  CMakeLists.txt  Common.h  Config.cpp  Config.h  Crypto.h  Logger.h  SRPConstants.h
src/shared/dbc/: AreaTableDbc.cpp  AreaTableDbc.h  CharStartOutfitDbc.cpp  CharStartOutfitDbc.h  ChrRacesDbc.cpp  ChrRacesDbc.h  DbcReader.cpp  DbcReader.h  EmotesTextDbc.cpp  FactionTemplateDbc.cpp  FactionTemplateDbc.h  FactionTemplateHelpers.h  GtOctCombatDbc.h  GtPlayerStatGameTables.cpp  GtPlayerStatGameTables.h  ItemDb2Wdb2.cpp  ItemDb2Wdb2.h  ItemDbHotfixStore.cpp  ItemDbHotfixStore.h  LanguagesDbc.cpp  LanguagesDbc.h  SpellDbc.cpp  SpellDbc.h  SpellDifficultyDbc.cpp  SpellDifficultyDbc.h  StarterSpellsDbc.cpp  StarterSpellsDbc.h
src/shared/game/: AccessLevel.h  ActionBarToggles.h  ActionButton.cpp  ActionButton.h  ChatLanguages.cpp  ChatLanguages.h  CombatDamage.cpp  CombatDamage.h  CreatureExtraFlags.h  EquipmentCache.cpp  EquipmentCache.h  ExperienceLogic.h  GmGossipDesignTokens.h  InventorySlots.h  ItemEquipSlots.cpp  ItemEquipSlots.h  MeleeRange.h  MirrorTimerTypes.h  PermissionNames.h  Permissions.h  PhaseShift.cpp  PhaseShift.h  PlayerFactionTeam.h  PlayerGmAppearance.cpp  PlayerGmAppearance.h  PlayerItemProficiency.h  PlayerQuestLog.h  PlayerResourceRegen.cpp  PlayerResourceRegen.h  QuestMask.h  RbacBuiltinRoles.h  ReputationRank.h  RestExperienceLogic.cpp  RestExperienceLogic.h  SkillLineCategories.cpp  SkillLineCategories.h  SpellAttributes.h  SpellAuraTypes.h  SpellCastHaste.h  SpellPowerCost.h  (+14 more)
src/shared/network/: AccountDataTypes.h  AuraUpdateWire.h  AuthPacket.h  AuthPackets.h  BitReader.h  BitWriter.h  ByteBuffer.h  KnownSpellsWire.h  MonsterMovePackets.h  MovementFlags.h  MovementInfo.h  MovementSetPackets.h  MovementStateQueries.h  MovementTeleportPackets.h  MovementWire.cpp  MovementWire.h  PhaseShiftWire.cpp  PhaseShiftWire.h  RealmLinkProtocol.h  SpellCastWire.cpp  SpellCastWire.h  SpellCooldownWire.h  UpdateData.h  UpdateFields.h  WorldCrypt.h  WorldOpcodes.h  WorldPacket.h
src/shared/system/: SystemBeep.cpp  SystemBeep.h  SystemClipboard.cpp  SystemClipboard.h
src/shared/tui/: CMakeLists.txt  FtxuiAnsi.cpp  FtxuiAnsi.h  FtxuiBanner.cpp  FtxuiBanner.h  FtxuiLogSink.cpp  FtxuiLogSink.h  FtxuiLogSpdlog.cpp  FtxuiLogSpdlog.h  FtxuiLogView.cpp  FtxuiLogView.h  FtxuiPalette.h  FtxuiSigInt.h  FtxuiTextClipboard.cpp  FtxuiTextClipboard.h
tests/: CMakeLists.txt
tests/data/: sticky_banner_config.yaml
tests/fixtures/vmap/: README.md
tests/unit/application/: CharacterActionButtonsTests.cpp  CharacterServiceRandomNameTests.cpp  CharacterServiceTests.cpp  CommandServiceRbacTests.cpp  CommandServiceReviveUnlearnTests.cpp  CreatureProximityAggroTests.cpp  CreatureSpawnLogicTests.cpp  GossipLogicTests.cpp  MapRegistryTests.cpp  MapServiceTests.cpp  PassiveSpellAurasTests.cpp  PhaseAreaCatalogTests.cpp  PhaseConditionEvaluatorTests.cpp  PlayerAuraRegenEffectsTests.cpp  PlayerAuraStatEffectsTests.cpp  PlayerCreateInfoServiceStatsTests.cpp  PlayerPhaseShiftTests.cpp  PlayerQuestProgressStoreTests.cpp  PlayerSpellbookTests.cpp  QuestGiverLogicTests.cpp  QuestGossipFilterTests.cpp  QuestGossipFlagsTests.cpp  QuestProgressLogicTests.cpp  RealmListServiceTests.cpp  SRPServiceTests.cpp  SpellHitEffectsTests.cpp  SpellManagerTests.cpp  WorldServiceMapRegistryTests.cpp
tests/unit/combat/: CombatHostilityTests.cpp
tests/unit/domain/: AuraTests.cpp  CreatureCombatStateTests.cpp  CreatureCombatTests.cpp  CreatureEvadeTests.cpp  GossipMenuTests.cpp  MapSnapshotTests.cpp  MapTests.cpp  NpcTextTests.cpp  PlayerCombatTests.cpp  RealmTests.cpp  SpellDefinitionTests.cpp  UnitTests.cpp
tests/unit/infrastructure/: ActionBarTogglesObjectUpdateTests.cpp  ActionButtonPacketTests.cpp  DatabaseMigrationCatalogTests.cpp  GmTicketGossipUiTests.cpp  (+12 more)
tools/config_tui/: CMakeLists.txt  ConfigEditorFtxui.cpp  ConfigEditorFtxui.h  config_tui_main.cpp
(+421 files in other folders)
